Add additional output files to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,18 @@
 # Debug files
 *.dSYM/
 *.su
+
+# Additional output files
+.amp_addrcache.o.cmd
+.amp_skactg.o.cmd
+.ampnetworkflow.ko.cmd
+.ampnetworkflow.mod.o.cmd
+.ampnetworkflow.o.cmd
+.networkflow.o.cmd
+.sockcallwatch_kprobe.o.cmd
+.tmp_versions/
+Module.symvers
+ampnetworkflow.mod.c
+common/src/.amp_log.o.cmd
+modules.order
+
